# crede

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  hardhat.config.ts  package.json  proof.json  proof_1729356007_316cd1ef-3934-4bbd-ba60-4d8ba8034096_72b45857-3bc4-4c94-bef0-70deed38c2c2.json  proof_1729356007_316cd1ef-3934-4bbd-ba60-4d8ba8034096_f67780f5-97d3-42a2-84c8-b9bff8d94870.json  proof_1729356682_83abbf84-0553-4106-aa56-bcbda6d0df9a.json  proof_1729357257_0ec0a5a6-9e78-4fd2-bd01-0dcce8823d18.json  proof_1729357257_0ec0a5a6-9e78-4fd2-bd01-0dcce8823d18_dd1490cb-6fb6-44b1-a618-d40489153683.json  proof_1729357535_48ee81d7-baf9-4be4-bd4e-f986f0e4ca56.json  proof_1729357535_48ee81d7-baf9-4be4-bd4e-f986f0e4ca56_fe95c50c-b764-45a3-a750-8316b4788ee9.json  proof_1729375417_9de893e8-eb77-4fa9-91e4-a1f68b177986.json  proof_1729378285_a973b859-a8d6-4731-956f-67d6ca30c120.json  proof_1729388503_bf18b9ff-5e6a-4726-a646-89f405650368.json  proof_1729388740_14305783-1933-4c4d-9d20-496c00710232.json  public_1729388503_bf18b9ff-5e6a-4726-a646-89f405650368.json  testnet.layerzero.config.ts
circuits/: AgeVerificationWithSignature.circom  ECDSAVerifyNoPrecompute.circom  bigint.circom  ecdsa.circom  package-lock.json  package.json  secp256k1.circom  verification_key.json  verifier.sol
circuits/utils/: generateWitness.js  inputs.json  sign.js  (+3 more)
config/: networks.ts  verify.ts
contracts/: Destination.sol  Source.sol  Verifier.sol
crede-frontend/: package-lock.json  package.json  tailwind.config.ts
deploy/: Destination.ts  IssueDoc.ts  SetProof.ts  Source.ts
src/: main.rs
(+17 files in other folders)
