[package]
name = "crede-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"      # Web framework
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
serde_json = "1.0"     # For working with JSON
tokio = { version = "1.0", features = ["full"] }    # Async runtime used by actix
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"